<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ventureapp.comedorestudiantil.Main.principal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"

        android:src="@drawable/cabecera"
        android:id="@+id/iv_cabecera"
        android:scaleType="fitXY" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/Login"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="@string/correo"
        android:id="@+id/et_usuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLines="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:id="@+id/et_password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:onClick="login"
            android:background="@color/colorBarra"
            android:textColor="@color/blanco"

            />

        <Button
            android:text="@string/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:id="@+id/btn_registrar"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:background="@color/colorBarra"
            android:textColor="@color/blanco"/>
    </LinearLayout>
</LinearLayout>
